# dqy

./: .gitignore  Cargo.toml  LICENSE  README.md  compile.md  dnsdoc.txt  dqy.md  queries.md  release.md  trace.md
.github/workflows/: rust.yml
args/: Cargo.toml
args/src/: args.rs  lib.rs  options.rs  plus.rs  resolver.rs
bind9/: Dockerfile  clean-up.sh  db.dqy-test.dns  db.medical.equipment  named.conf.local  named.conf.options  run.sh  venom-dqy.yml
bind9/cert/: cert.der  cert.pem  key.pem  public_key.pem
bind9/config/: named.conf.local  named.conf.options
config/: dqy.yml  dqy.yml2
dns/: Cargo.toml  foo
dns/src/: buffer.rs  butter_mut.rs  databuf.rs  date_time.rs  either.rs  either_or.rs  error.rs  lib.rs  message.rs  network.rs
dns/src/network/: mod.rs  tls.rs  transport.rs
dns/src/rfc/: a.rs  aaaa.rs  afsdb.rs  algorithm.rs  apl.rs  caa.rs  cert.rs  char_string.rs  cname.rs  csync.rs  dhcid.rs  dname.rs  dnskey.rs  domain.rs  domain_orig.rs  ds.rs  eui48.rs  eui64.rs  flags.rs  header.rs  hinfo.rs  hip.rs  ipseckey.rs  kx.rs  loc.rs  message.rs  mod.rs  mx.rs  naptr.rs  ns.rs  nsec.rs  nsec3.rs  nsec3param.rs  nsid.rs  opcode.rs  openpgpkey.rs  opt.rs  packet_type.rs  ptr.rs  qclass.rs  (+22 more)
dns/src/rfc/opt/: client_subnet.rs  cookie.rs  dau_dhu_n3u.rs  mod.rs  nsid.rs  opt.rs  opt_code.rs  opt_data.rs  opt_option.rs  opt_query.rs  opt_response.rs  padding.rs
dns/src/rfc1035/: char_string.rs  dnskey.rs  domain.rs  ds.rs  flags.rs  header.rs  loc.rs  message.rs  mod.rs  opt.rs  packet_type.rs  qclass.rs  qtype.rs  query.rs  question.rs  rdata.rs  resource_record.rs  response.rs  response_code.rs  rrsig.rs
dns/src/rfc6891/: mod.rs  opt.rs
dns/src/transport/: endpoint.rs  https.rs  mod.rs  mode.rs  quic.rs  tcp.rs  tls.rs  udp.rs  udp2.rs
dns/tests/: aaaa.pcap  afsdb.pcap  all_rr.sh  apl.pcap  caa.pcap  cap1.pcap  cap4.pcap  cdnskey.pcap  cert.pcap  cname.pcap  create_sample_data.sh  csync.pcap  dhcid.pcap  dlv.pcap  dnskey.pcap  eui48.pcap  eui64.pcap  get_wire_data.sh  hip.pcap  integration_tests.rs  integration_tests.rs.old  ipseckey.pcap  mx.pcap  ns.pcap  nsec3.pcap  openpgpkey.pcap  ptr.pcap  smimea.pcap  sshfp.pcap  svcb.pcap  tlsa.pcap  zonemd.pcap
dnslib/: Cargo.toml
dnslib/src/: error.rs  lib.rs  network.rs
dnslib/src/rfc1035/: char_string.rs  domain.rs  flags.rs  header.rs  hinfo.rs  loc.rs  message.rs  mod.rs  mx.rs  ns.rs  opcode.rs  packet_type.rs  qclass.rs  question.rs  resource_record.rs  response_code.rs  txt.rs
doc/: dqy.1  endpoint_cases.ods  help.adoc  supported_types.txt  trace.md  usage_examples.txt
docker/: Dockerfile  build_all.py  build_all.sh  cleanup.sh  compile.sh  dockerfile.alpine  dockerfile.arm64v8-alpine  dockerfile.arm64v8-ubuntu  dockerfile.test  dockerfile.ubuntu
dqy/: Cargo.toml
dqy/src/: lua.rs  main.rs  protocol.rs  trace.rs
dqy/tests/: integration_test.rs
error/: Cargo.toml
error/src/: lib.rs
lua/: dig.lua  dog.lua  rdata.lua
network/: Cargo.toml
network/src/: lib.rs
options/: Cargo.toml
options/src/: lib.rs
scripts/: add_rr.py  add_rr.sh  add_utest.py  all_rr.sh  all_rrs.rb  compile_musl.sh  create_enum.py  extract_rr.py  readme.sh  rename_bin.ps1  rename_bin.sh
show/: Cargo.toml
show/src/: lib.rs  query_info.rs  show.rs
src/: args.rs  certgen.rs  cli_options.rs  config.rs  display.rs  error.rs  handlebars.rs  lib.rs  lua.rs  main.rs  options.rs  output.rs  protocol.rs  resolver.rs  show.rs  templating.rs  trace.rs
src/dns/: buffer.rs  date_time.rs  message.rs  mod.rs
src/dns/rfc/: a.rs  aaaa.rs  afsdb.rs  algorithm.rs  apl.rs  caa.rs  cert.rs  char_string.rs  cname.rs  csync.rs  dhcid.rs  dname.rs  dnskey.rs  domain.rs  domain2.rs  domain_orig.rs  ds.rs  eui48.rs  eui64.rs  flags.rs  header.rs  hinfo.rs  hip.rs  ipseckey.rs  kx.rs  loc.rs  mod.rs  mx.rs  naptr.rs  ns.rs  nsec.rs  nsec3.rs  nsec3param.rs  opcode.rs  openpgpkey.rs  ptr.rs  qclass.rs  qtype.rs  query.rs  question.rs  (+19 more)
src/dns/rfc/opt/: client_subnet.rs  cookie.rs  dau_dhu_n3u.rs  extended.rs  llq.rs  mod.rs  nsid.rs  opt_rr.rs  padding.rs  report_chanel.rs  zoneversion.rs
src/transport/: crypto.rs  endpoint.rs  https.rs  mod.rs  network.rs  quic.rs  root_servers.rs  target.rs  tcp.rs  tls.rs  udp.rs
tests/: args.yml  bortz.txt  integration_test.rs  integration_test.rs.old  test_all.sh  tpl.hbs
tests/pcap/: a.pcap  cap2.pcap  cap3.pcap  cds.pcap  dname.pcap  ds.pcap  foo.pcapng  get_wire_data.sh  hinfo.pcap  kx.pcap  loc.pcap  naptr.pcap  nsec.pcap  nsec3param.pcap  rp.pcap  rrsig.pcap  smimea.pcap  soa.pcap  srv.pcap  tkey.pcap  txt.pcap  uri.pcap
tests/venom/: bind9.yml  dqy-test.yml  dqy.yml  endpoint-ipv4.yml  endpoint-ipv6.yml  endpoint.yml  idna.yml  internet.yml  rr.yml  test_all.sh
tests/venom/bind9/: db.dqy-test.dns  named.conf.options  run.sh
transport/: Cargo.toml
transport/src/: endpoint.rs  https.rs  lib.rs  protocol.rs  quic.rs  root_servers.rs  tcp.rs  tls.rs  udp.rs
