[workspace]
members = [ 
    "args", 
    "dns",
    "dqy",
    "error",
    "network",
    "transport",
    "show"]
resolver = "2"

[workspace.package]
version = "0.3.0"  #:version
authors = ["Alain Viguier <dandyvica@gmail.com>"]
description = """
dqy is a DNS query tool inspired by dig, drill and dog.
"""
documentation = "https://github.com/dandyvica/dqy"
homepage = "https://github.com/dandyvica/dqy"
repository = "https://github.com/dandyvica/dqy"
keywords = ["dns"]
categories = ["command-line-utilities"]
license = "MIT"
edition = "2021"
rust-version = "1.81.0"

[workspace.dependencies]
bytes = "1.5.0"
colored = "2.1.0"
env_logger = "0.10.1"
error = { path = "./error" }
http = "1.0.0"
log = "0.4.20"
network = { path = "./network" }
rand = "0.8.5"
reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls-webpki-roots", "blocking"] }
resolver = { git = "https://github.com/dandyvica/resolver.git" }
rustls = { version = "0.23.15", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pki-types = "1.1.0"
serde = { version = "1.0.195", features = [ "derive" ] }
serde_json = { version = "1.0.111", features = ["preserve_order"] }
webpki-roots = "0.26.0"

[profile.release]
strip = "debuginfo"





