[package]
name = "dnslib"
edition = "2021"
version = "0.6.0"  #:version
authors = ["Alain Viguier <dandyvica@gmail.com>"]
description = """
dqy is a DNS query tool inspired by dig, drill and dog.
"""
documentation = "https://github.com/dandyvica/dqy"
homepage = "https://github.com/dandyvica/dqy"
repository = "https://github.com/dandyvica/dqy"
keywords = ["dns"]
categories = ["command-line-utilities"]
license = "MIT"
rust-version = "1.82.0"

[lib]
name = "dnslib"
path = "src/lib.rs"

[dependencies]
base16 = "0.2.1"
base64 = "0.21.5"
byteorder = "1.5.0"
bytes = "1.9.0"
chrono = "0.4.38"
clap = { version = "4.5.47", features = ["cargo"] }
colored = "2.2.0"
enum_from = { git = "https://github.com/dandyvica/enum_from.git" }
# handlebars = "6.3.0"
home = "0.5.11"
http = "1.0.0"
idna = "1.0.3"
lazy_static = "1.4.0"
log = "0.4.22"
mlua = { version = "0.11.3", features = [ "lua54", "serialize" ], optional = true }
quinn = "0.11.9"
rand = "0.8.5"
rcgen = "0.13.1"
regex = "1.11.2"
reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls-webpki-roots", "blocking", "http2"] }
resolving = { git = "https://github.com/dandyvica/resolving" }
rustc_version_runtime = "0.3.0"
rustls = { version = "0.23.31", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pki-types = "1.12.0"
serde = { version = "1.0.225", features = [ "derive" ] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde_yaml = "0.9.34"
simplelog = "0.12.2"
# tera = "1.20.0"
thiserror = "1.0.65"
tokio = { version = "1", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
type2network = { git = "https://github.com/dandyvica/type2network" }
type2network_derive = { git = "https://github.com/dandyvica/type2network/" }
unicode-width = "0.2.0"
webpki-roots = "1.0.1"

[dev-dependencies]
pcap-file = "2.0.0"

[profile.release]
strip = "debuginfo"

[lints.clippy]
upper_case_acronyms = "allow"
unnecessary_cast = "allow"

[[bin]]
name = "certgen"
path = "src/certgen.rs"

[[bin]]
name = "dqy"
path = "src/main.rs"
