[package]
name = "args"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.8"
dns = { path = "../dns" }
env_logger.workspace = true
error = { path = "../error" }
http.workspace = true
idna = "0.4.0"
log.workspace = true
resolver.workspace = true
show = { path = "../show" }
transport = { path = "../transport" }


