[package]
name = "args"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
clap = "4.4.8"
dns = { path = "../dns" }
env_logger.workspace = true
error = { path = "../error" }
http.workspace = true
idna = "0.4.0"
log.workspace = true
rustc_version_runtime = "0.3.0"
show = { path = "../show" }
transport = { path = "../transport" }


