[package]
name = "dns"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
base16 = "0.2.1"
base64 = "0.21.5"
byteorder = "1.5.0"
bytes.workspace = true
chrono = "0.4.38"
colored.workspace = true
enum_from = { git = "https://github.com/dandyvica/enum_from.git" }
error = { path = "../error" }
log.workspace = true
network.workspace = true
num_enum = "0.7.3"
rand = "0.8.5"
reqwest.workspace = true
resolver.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
serde_json.workspace = true
show = { path = "../show" }
type2network = { git = "https://github.com/dandyvica/type2network" }
type2network_derive = { git = "https://github.com/dandyvica/type2network/" }
webpki-roots.workspace = true

[dev-dependencies]
pcap-file = "2.0.0"
