[package]
name = "dnslib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
byteorder = "1.5.0"
rand = "0.8.5"
type2network = { git = "https://github.com/dandyvica/type2network" }
type2network_derive = { git = "https://github.com/dandyvica/type2network" }
enum_from = { git = "https://github.com/dandyvica/enum_from.git" }

