[package]
name = "dqy"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
args = { path = "../args" }
dns = { path = "../dns" }
env_logger.workspace = true
error = { path = "../error" }
lazy_static = "1.4.0"
log.workspace = true
mlua.workspace = true
rand = "0.8.5"
serde.workspace = true
serde_json.workspace = true
show = { path = "../show" }
transport = { path = "../transport" }

[features]
nolua = []





