[package]
name = "error"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua.workspace = true
reqwest.workspace = true
resolver.workspace = true
rustls.workspace = true

