[package]
name = "error"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
mlua = { version = "0.9.4", features = [ "lua54", "serialize" ], optional = true }
reqwest.workspace = true
resolver.workspace = true
rustls.workspace = true

