[package]
name = "show"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.9.4", features = [ "lua54", "serialize" ], optional = true }
serde.workspace = true
serde_json.workspace = true

[features]
lua = []
