[package]
name = "transport"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes.workspace = true
error = { path = "../error" }
http.workspace = true
log.workspace = true
reqwest.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
webpki-roots.workspace = true


