[package]
name = "transport"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
bytes.workspace = true
error = { path = "../error" }
http.workspace = true
log.workspace = true
reqwest.workspace = true
resolver.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
webpki-roots.workspace = true


